# whisperlab

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: code_of_conduct.md  reading list.md  whisperlab_demo_notebook.ipynb
notebooks/: WhisperLabDemo.ipynb
src/whisperlab/: __init__.py  __main__.py  audio.py  clean_whisperlab.py  logger.py  logging.py  main.py  microphone.py  run_whisper.py  tasks.py  time.py  transcribe.py  transcribeRT.py
tests/: test_logging.py  test_main.py  test_pypath.py  test_run_whisper.py  test_transcribe.py  test_whisperlab.py
tests/data/: poem_sappho_58_by_Jameson_Fitzpatricktxt
