# -----------------------------------------------------------------------------

# Whisperlab Project Metadata

# -----------------------------------------------------------------------------

[project]
name = "whisperlab"
description = "A Python package for running Whisper on colab, mobile, and more!"
authors = [{ name = "Max Suica", email = "max.suica@gmail.com" }]
license.text = "AGPLv3"
version = "0.2.0"
readme = "README.md"
urls = { Homepage = "https://github.com/maxsu/WhisperColab.py" }
keywords = ["whisper", "colab", "text to speech", "assistive technology"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# -----------------------------------------------------------------------------

# Dependencies

# -----------------------------------------------------------------------------

dependencies = [
    # AI
    "openai-whisper",
    # Data Models
    "pydantic",
    # CLI
    "click",
    # Logging
    "logging518",
    # QA
    "flake8",
    "pytest",
]


# We support python 3.8 - 3.12
requires-python = ">=3.8"


[build-system]
requires = ["setuptools", "wheel"]


# -----------------------------------------------------------------------------

# Linting

# -----------------------------------------------------------------------------

[tool.flake8]

# Rules
select = ["F6", "F7", "F8", "F9"] # Break build on syntax errors
extend-ignore = ["E5", "C9"]      # Warn about long or complex lines

# Options
max-complexity = 10
count = true
statistics = true
show-source = true

# See:
# - Rules Reference: https://www.flake8rules.com/
# - Options Reference https://flake8.pycqa.org/en/latest/user/configuration.html

# -----------------------------------------------------------------------------

# Testing

# -----------------------------------------------------------------------------

[tool.pytest.ini_options]

# Live-log outputs during tests  (Turn this off for quieter tests)
log_cli = true 

# See: 
# Log-Cli Reference: https://docs.pytest.org/en/6.2.x/reference.html#confval-log_cli


# -----------------------------------------------------------------------------

# Logging

# -----------------------------------------------------------------------------

[tool.logging]

version = 1

# main logger
loggers.main.level = "DEBUG"
loggers.main.handlers = ["console", "file"]

[tool.logging.handlers]
console.class = "logging.StreamHandler"
console.stream = "ext://sys.stdout"
console.formatter = "simple"

file.class = "logging.FileHandler"
file.filename = "whisperlab_main.log"
file.formatter = "verbose"

[tool.logging.formatters]
simple.style = "{"
simple.format = "{asctime} [{levelname}] {message}"

verbose.class = "whisperlab.logging.Formatter" # Provide relpath
verbose.style = "{"
verbose.format = """{asctime} [{levelname}]
src: {relpath}:{lineno}
msg: {message}
-------------------------------"""
